# dev-workspace-setup

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .talismanrc  Cargo.toml  LICENSE  README.md  flake.nix  kanban_state.md  poetry.toml  pyproject.toml  result  rust-toolchain.toml  setup.sh  setup_manjaro.sh  shell.nix  tasks.py
.claude/: settings.json
.devcontainer/: devcontainer.json
nix/: overlays.nix  talisman.nix
python/: pyproject.toml
python/tests/: conftest.py
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/crates/my-app/: Cargo.toml
rust/crates/my-app/src/: feature.rs  main.rs
rust/crates/my-app/src/feature_name/: mod.rs
rust/data-app/: Cargo.toml
rust/my-app/src/: main.rs
tests/: conftest.py  templates.py
