[tool.poetry]
name = "PROJECT_NAME"
version = "0.0.0"
description = "DESCRIPTION"
authors = ["Your Name <you@example.com>"]
license = "Proprietary"
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0.1"
invoke = "^2.2.0"


[tool.poetry.group.dev.dependencies]
pre-commit = ">=2.21.0"
pyright = "^1.1.352"
ruff = "^0.3.0"


[tool.poetry.group.test.dependencies]
pytest = ">7.2.1"
pytest-mock = ">=3.10.0"
pytest-xdist = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
select = [
    "A",
    "B",
    "C",
    "E",
    "F",
    "I",
    "UP",
    "PL",
    "PTH",
    "PGH",
    "ERA",
    "RUF",
    "TRY",
]
target-version = "py312"
line-length = 90
# maturity path:
# "E", "F", "W", "UP", "I", "NPY", "A", "PTH", "PLR", "PGH", "RUF", "ARG", "RET", "PD", "N", "PLC", "PT", "INP", "TRY", "SIM", "TD", "PLW", "BLE", "B", "DTZ", "G", "PGH", "Q", "ERA", "EM", "FLY", "PT", "ISC", "SLF"
ignore = ["PLR2004", "E501", "COM812"]
fix = true

fixable = ["ALL"]
unfixable = ["E731"]

exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".pytest_cache",
    ".venv",
    "venv",
    "build",
    "dist",
]

[tool.ruff.mccabe]
max-complexity = 8

[tool.ruff.flake8-quotes]
inline-quotes = "double"
multiline-quotes = "double"

[tool.pyright]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"
