[project]
name = "PROJECT_NAME"
version = "0.1.0"
description = "DESCRIPTION"
authors = [
    { name = "Business-Wizard", email = "49175856+Business-Wizard@users.noreply.github.com" },
]
readme = "README.md"
requires-python = ">= 3.14"
dependencies = ["returns>=0.26.0"]

[dependency-groups]
dev = [
    "invoke>=2.2.0",
    "pre-commit>=3.7.1",
    "basedpyright>=1.1.372",
    "pytest>=8.2.2",
    "pytest-xdist>=3.6.1",
    "pyyaml>=6.0.1",
    "ruff>=0.5.2",
]

[tool.ruff]
target-version = "py314"
line-length = 90
fix = true
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".pytest_cache",
    ".venv",
    "venv",
    "build",
    "dist",
]

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = ["E731"]
select = ["ALL"]
# maturity path:
# "E", "F", "W", "UP", "I", "NPY", "A", "PTH", "PLR", "PGH", "RUF", "ARG", "RET", "PD", "N", "PLC", "PT", "INP", "TRY", "SIM", "TD", "PLW", "BLE", "B", "DTZ", "G", "PGH", "Q", "ERA", "EM", "FLY", "PT", "ISC", "SLF"
ignore = ["COM812", "D1", "E501", "PLR2004"]
per-file-ignores = { "tests/*.py" = ["S101", "ANN201", "INP001"] }

[tool.ruff.lint.mccabe]
max-complexity = 8

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
multiline-quotes = "double"

[tool.basedpyright]
pythonVersion = "3.14"
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"
reportMissingParameterType = false
